# KyLogger

./: .pypirc  README.md  pyproject.toml
src/: LogTypes.py  Logger.py  __init__.py
src/KyLogger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
