[project]
name = "KyLogger"
version = "1.0.0"
authors = [
  { name="Rightburrow", email="rightburrowyt@gmail.com" },
]
description = "Logging package for logging to files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rightburrowttv/KyLogger"
Issues = "https://github.com/rightburrowttv/KyLogger/issues"